Bug #40946: assertion in PageInventoryPage::allocPage in recovery.

Reason : 
Creation of section pages was still not always logged, even after the 
previous patch.During recovery, section page is not recreated and 
Falcon asserts when new page must be allocated (recovery does not
tolarate new pages allocations during this phase)

Solution:
When section page is created, always create serial log entry log. 
For this purpose, creation and logging are factored out into separate 
function allocSectionPage().